--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
-  "name": "test",
-=======
-  "name": "ico2",
->>>>>>> 6859c5a231b4a33335cdad89b6f73401fd9eba5c
+  "name": "accept-ico",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
@@ -17,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bignumber": "1.1.0",
+    "bignumber.js": "^7.2.1",
     "openzeppelin-solidity": "1.12.0"
   },
   "devDependencies": {
